--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -2,7 +2,7 @@ FROM telegraf:1.15-alpine
 LABEL Name=telegraf Maintainer="Jonathan Sloan"
 
 RUN echo "*** installing packages ***" \
-    && apk --no-cache add -y smartmontools apcupsd \
+    && apk --no-cache add smartmontools apcupsd \
     && rm -rf /tmp/* /var/tmp/* /var/cache/apt/* /var/lib/apt/lists/*
 
 COPY VERSION .
